Fix content overlapping navbar: increase margin-top for BS5 taller navbar

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -3,7 +3,7 @@
 .site-content {
   min-height: 60vh;
   padding-top: 1.5rem;
-  margin-top: 57px;
+  margin-top: 80px;
   transition: all 0.4s;
 }
 
